Finally drafting subsection about coarea formula and parameter transforms

--- a/references.bib
+++ b/references.bib
@@ -436,7 +436,7 @@
 }
 
 @article{paulin2015concentration,
-  title = {Concentration Inequalities for Markov Chains by Marton Couplings and Spectral Methods},
+  title = {Concentration Inequalities for {M}arkov Chains by {M}arton Couplings and Spectral Methods},
   author = {Paulin, Daniel},
   journal = {Electronic Journal of Probability},
   volume = {20},
