--- a/references.bib
+++ b/references.bib
@@ -467,3 +467,13 @@
   archivePrefix = {arXiv},
   primaryClass = {math.PR}
 }
+
+@article{cook2006validation,
+  title={Validation of software for {B}ayesian models using posterior quantiles},
+  author={Samantha Cook and Andrew Gelman and Donald B. Rubin},
+  journal={Journal of Computational and Graphical Statistics},
+  volume={15},
+  number={3},
+  pages={675--692},
+  year={2006}
+}
