--- a/references.bib
+++ b/references.bib
@@ -477,3 +477,14 @@
   pages={675--692},
   year={2006}
 }
+
+@article{rubin1996multiple,
+  title={Multiple imputation after 18+ years},
+  author={Donald B. Rubin},
+  journal={Journal of the American Statistical Association},
+  volume={91},
+  number={434},
+  year={1996},
+  pages={473--489}
+}
+
